<resources>
    <string name="app_name">Daignosis App</string>
    <string name="daignosis">Daignosis</string>

    //preview tools
    <string name="title_article">Siapa saja yang rentan terkena osteoporosis ?</string>
    <string name="date_article">Sabtu, 27 Mei 2023</string>

    //ContentDesc
    <string name="logo_daig">Daignosis Logo</string>
    <string name="article_photo">Foto Artikel</string>
    <string name="photo_profile">Foto Profil</string>
    <string name="fab_add">Tombol mengambang tambah sesi baru</string>

    //Loginpage
    <string name="snack_login">Login Berhasil !</string>
    <string name="snack_loginError">Login Gagal !</string>
    <string name="sign_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_desc">Apakah Anda belum punya akun ?</string>
    <string name="register"><u>Register</u></string>
    <string name="forgot">Forgot Password ?</string>
    <string name="invalid_email">Format Email salah</string>

    //Register
    <string name="snack_regis">Register Berhasil !</string>
    <string name="snack_regisError">Register Gagal !</string>
    <string name="user">Username</string>
    <string name="back">Kembali</string>
    <string name="regis">Register</string>

    //Forgotpw
    <string name="forgot_pw">Forgot Password</string>
    <string name="apply">Submit</string>
    <string name="snack_forgot">Cek password baru mu di Inbox/Spam Emailmu !</string>
    <string name="snack_forgotError">Username Tidak Valid !</string>


    //Homepage
    <string name="recent_article">Artikel Terbaru</string>
    <string name="other">Lainnya</string>
    <string name="main_feature">Konsultasi</string>
    <string name="konsul_ai">Konsultasi Dengan AI</string>

    //Konsul page
    <string name="chat_example">Hai, Zeta! Perkenalkan saya Daignosis yang akan membantu diagnosis penyakit Anda. Keluhan apa yang Anda rasakan?</string>
    <string name="chat_box_hint">Ketik Keluhan Anda</string>
    <string name="consult">Konsultasi</string>
    <string name="history">Riwayat Konsultasi</string>
    <string name="session_id">324de955–56d0–40ae-abce-7b3f59bd5d8d</string>
    <string name="fail_session">Gagal Membuat Sesi Baru</string>
    <string name="fail_sendMsg">Gagal Mengirim Pesan </string>
    <string name="must_login">Silahkan login terlebih dahulu</string>
    <string name="fail_history">Gagal Mendapatkan Histori Konsultasi</string>
    <string name="me">Saya</string>
    <string name="bot">Daignosis Bot</string>

    //Profile
    <string name="profile">Profil</string>
    <string name="email_profile">Ditoiqbalk@gmail.com</string>
    <string name="username_profile">dito</string>
    <string name="title_editprof"> Ubah Profil </string>
    <string name="fullname">Nama Lengkap</string>
    <string name="birthdate">Tanggal Lahir</string>
    <string name="phone_num">Nomor Telepon</string>
    <string name="address">Alamat</string>
    <string name="city">Kabupaten/Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="post_code">Kode Pos</string>
    <string name="country">Negara</string>
    <string name="save">Simpan Perubahan</string>
    <string name="logout">Logout</string>
    <string name="log_desc">Apakah Anda yakin ingin keluar dari aplikasi ?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="edit_success">Simpan Perubahan Profil Berhasil !</string>
    <string name="edit_fail">Gagal Menyimpan Perubahan</string>
    <string name="getProfile_fail">Gagal mendapatkan data Profile!</string>

    //Article
    <string name="title_topbar_listArtikel">Artikel</string>
    <string name="title_topbar_detail">Detail Artikel</string>
    <string name="verified"> - Artikel ini telah terverifikasi oleh tim Daignosis</string>

    <string name="desc">Daignosis, Jakarta – Osteoporosis adalah masalah tulang yang paling diwaspadai oleh orang lanjut usia.

Osteoporosis mampu membuat tulang menjadi lemah dan rapuh, sehingga membuat postur pengidapnya membungkuk hingga berisiko mengalami patah tulang. Patah tulang akibat osteoporosis rentan terjadi di bagian pinggul, pergelangan tangan, atau tulang belakang.

Seiring bertambahnya usia, kepadatan tulang otomatis menurun. Bukan itu saja, pembentukan tulang yang baru pun melambat dan tidak seimbang dengan yang mengeropos. Lantas, apakah kondisi ini hanya berisiko dialami oleh lansia saja? Simak penjelasan berikut.

Individu yang Rentan Terserang Osteoporosis
Usia memang menjadi faktor risiko utama osteoporosis. Pasalnya, kepadatan tulang akan mencapai puncaknya saat menginjak usia 30 tahun. Melewati usia tersebut, kamu akan mulai kehilangan massa tulang. Namun, usia ternyata bukan satu-satunya faktor risiko osteoporosis, orang dengan kondisi berikut ini juga rentan mengalami osteoporosis.

1. Wanita
Wanita terutama yang sudah menginjak usia 50 tahun ke atas adalah kelompok individu yang paling rentan terserang osteoporosis. Peluangnya pun lebih besar empat kali lipat daripada pria. Alasannya, tulang wanita lebih ringan dan punya peluang umur yang lebih panjang. Meski begitu, bukan berarti pria tidak berisiko juga, ya. Pria juga berisiko mengalami osteoporosis, tetapi dengan peluang yang lebih kecil.
2. Keturunan Osteoporosis
Jika kakek, nenek, atau bahkan orangtua kamu mengalami tanda-tanda osteoporosis, seperti patah tulang pinggul setelah jatuh ringan, kemungkinan besar kamu juga bisa mengalaminya di kemudian hari.
3. Struktur Tulang dan Berat Badan
Kamu pasti berpikir kalau orang yang bertubuh gemuk lebih rentan mengalami osteoporosis. Ternyata ini kurang tepat. Seseorang yang bertubuh mungil atau berberat badan rendah justru berpeluang lebih besar mengalami osteoporosis. Alasannya, wanita dengan postur tersebut memiliki lebih sedikit tulang untuk dihilangkan dibandingkan dengan orang gemuk yang punya kerangka lebih besar.
Baca juga: Osteoporosis Bisa Terjadi Sejak Kecil, Benarkah?
4. Pernah Patah Tulang
Kalau kamu pernah mengalami patah tulang sebelumnya, kamu mungkin berisiko mengalami osteoporosis di kemudian hari. Ini karena, kondisi tulang kamu sudah tidak begitu kuat lagi.
5. Etnis
Melansir dari WebMD, wanita Kaukasia dan Asia punya risiko lebih besar mengembangkan osteoporosis dibandingkan wanita dari etnis lain. Risiko patah pinggul juga berpeluang lebih besar dialami wanita Kaukasia daripada wanita Afrika-Amerika.
6. Mengidap Penyakit
Orang yang mengidap penyakit tertentu, seperti rheumatoid arthritis punya kemungkinan osteoporosis lebih besar daripada yang lain.
7. Mengonsumsi Obat
Penggunaan obat-obatan tertentu dalam jangka waktu panjang, seperti prednison diketahui mampu meningkatkan risiko osteoporosis lebih besar. Kalau kamu sedang meminum obat ini, sebaiknya diskusikan dengan dokter lebih lanjut terkait manfaat dan efek sampingnya dalam jangka panjang. Kamu bisa bertanya ke dokter lewat aplikasi Halodoc terkait hal ini.
8. Pola Hidup Tidak Sehat
Merokok dan minum alkohol ada gaya hidup yang mampu memengaruhi kondisi tulang. Bukan cuma tulang saja, merokok dan minum alkohol juga bisa menimbulkan berbagai masalah kesehatan lainnya. Minum alkohol dalam jumlah banyak dapat menyebabkan penipisan tulang dan lebih mungkin membuat patah tulang.
</string>

</resources>