<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_article_photo"
            android:layout_width="77dp"
            android:layout_height="77dp"
            android:contentDescription="@string/article_photo"
            card_view:shapeAppearanceOverlay="@style/RoundedSquare"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/example_photo_article"/>

        <TextView
            android:id="@+id/tv_article_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_article_photo"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:maxLines="2"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_article_photo"
            card_view:layout_constraintTop_toTopOf="@+id/img_article_photo"
            tools:text="@string/title_article" />

        <TextView
            android:id="@+id/tv_article_date"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            card_view:layout_constraintBottom_toBottomOf="@+id/img_article_photo"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_article_title"
            card_view:layout_constraintStart_toStartOf="@+id/tv_article_title"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_article_title"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/date_article" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>