<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".ui.login.LoginActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/register_desc"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_regis"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_regis" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_login" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />


    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_box"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:text="@string/email"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="622dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/design_default_color_error"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_editor_absoluteX="37dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/container_shape"
                android:drawableEnd="@drawable/ic_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="4dp"
            android:text="@string/password"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="622dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingTop="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:errorEnabled="true"
            app:helperTextTextColor="@color/design_default_color_error"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            tools:layout_editor_absoluteX="37dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_login_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/container_shape"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_loginpage"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_btn"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/forgot"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_loginpage"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>